feat(docker): set up for kafka comsumer and plubisher
