# src/main/resources/openapi/passive_product.yaml
@@ -201,12 +201,6 @@ components:
         accountType:
           type: string
           enum: [SAVING, CURRENT, FIXED_TERM]
-        transactionLimit:
-          type: integer
-        maintenanceFee:
-          type: number
-        allowedMovementDay:
-          type: integer
 
     BalanceResponse:
       type: object
